apps/ghost/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
